feat: split swagger content to a separate table and return it on demand
